Revert temporary fix for overflowing bottom card border box.
* found in #23181.

--- a/client/blocks/product-purchase-features-list/style.scss
+++ b/client/blocks/product-purchase-features-list/style.scss
@@ -25,9 +25,4 @@
 	background-color: $white;
 	border-radius: 0;
 	margin: 0;
-
-	// Chrome bug wraps shadow into next column.
-	// Remove when fixed
-	// @see https://github.com/Automattic/wp-calypso/pull/23181#issuecomment-377649871
-	margin-bottom: 1px;
 }
